# Image2Pixel

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp
legacy/: main_gtk_legacy.c
